# detection_coverage_app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE.md  README.md  RELEASE.md  Reputation Records_5.1.0.json  Sensor demo.json  app.py  entitlements.plist  index.html  install_tool.sh  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.py  sitemap.xml
.github/workflows/: build_and_push_docker_image.yaml  build_documentation.yaml  build_executable.yaml  ossar.yml
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/development/: index.html
0.2.0/installation/: index.html
0.2.0/search/: search_index.json
0.2.0/stellarcyberapi/: index.html
0.2.0/stellarmitre/: index.html
0.2.0/streamlitcoverageanalyzer/: index.html
0.2.0/usage/: index.html
0.2.0/vars/: index.html
api/: index.html
coverage_analyzer/: callbacks.py  mitre.py  plots.py  stellar.py  streamlit.py  ui.py  vars.py
development/: index.html
docs/: api.md  development.md  index.md  installation.md  stellarcyberapi.md  stellarmitre.md  streamlitcoverageanalyzer.md  testing.md
installation/: index.html
search/: search_index.json
stellarcyberapi/: index.html
stellarmitre/: index.html
streamlitcoverageanalyzer/: index.html
testing/: index.html
tests/: conftest.py  test_app.py  test_mitre.py  test_plots.py  test_run.py  test_stellar.py  test_streamlit.py
